@@ -1,4 +1,4 @@
-21/07/2016
+22/07/2016
 
 Added:
 	some factions and subfactions lack medics and engineers (http://dev.withsix.com/issues/70799)
@@ -44,6 +44,7 @@ Fixed:
 	long magazine reload times on Tunguska (http://dev.withsix.com/issues/65710)
 	HMMWV windshield is practically unbreakable (http://dev.withsix.com/issues/66995)
 	BIS_fnc_selectRandom biased towards inner elements (http://dev.withsix.com/issues/69439)
+	[ACR] wrong inventory setup for some units, RPG ammo (http://dev.withsix.com/issues/70197)
 	[ACR] BVP-1 - the 'remaining' bugs (http://dev.withsix.com/issues/70470)
 	7.62mm muzzle velocities are incorrect - too fast (http://dev.withsix.com/issues/71262)
 	[ACR] CZ 805 BREN optics (http://dev.withsix.com/issues/71282)
